reduced sankey width to avoid horizontal scrollbars

--- a/styles/layouts/l-flows.scss
+++ b/styles/layouts/l-flows.scss
@@ -23,7 +23,7 @@
   > .c-sankey {
     top: 56px;
     left: 320px;
-    width: calc(100% - 250px);
+    width: calc(100% - 320px);
     height: calc(100% - 108px);
   }
 
